--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div id="huxblog_navbar">
+            <div id="Xiaohanblog_navbar">
                 <div class="navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -52,7 +52,7 @@
         var $navbar = document.querySelector('#huxblog_navbar');
         var $collapse = document.querySelector('.navbar-collapse');
 
-        var __HuxNav__ = {
+        var __XiaoNav__ = {
             close: function () {
                 $navbar.className = " ";
                 // wait until animation end.
@@ -72,9 +72,9 @@
         // Bind Event
         $toggle.addEventListener('click', function (e) {
             if ($navbar.className.indexOf('in') > 0) {
-                __HuxNav__.close()
+                __XiaoNav__.close()
             } else {
-                __HuxNav__.open()
+                __XiaoNav__.open()
             }
         })
 
@@ -85,13 +85,13 @@
          * $toggle/$collapse will break global delegation.
          * 
          * Instead, we use a 'e.target' filter to prevent handler
-         * added to document close HuxNav.  
+         * added to document close XiaoNav.  
          *
          * Also, we use 'click' instead of 'touchstart' as compromise
          */
         document.addEventListener('click', function (e) {
             if (e.target == $toggle) return;
             if (e.target.className == 'icon-bar') return;
-            __HuxNav__.close();
+            __XiaoNav__.close();
         })
     </script>
