--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -919,7 +919,7 @@ samp {
    * Animation
    * HuxBlog-Navbar using genuine Material Design Animation
    */
-  #huxblog_navbar {
+  #Xiaohanblog_navbar {
     /**
      * Sharable code and 'out' function
      */
