--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -49,7 +49,7 @@
         // in high-perf jank-free CSS3 implementation
         var $body = document.body;
         var $toggle = document.querySelector('.navbar-toggle');
-        var $navbar = document.querySelector('#huxblog_navbar');
+        var $navbar = document.querySelector('#Xiaohanblog_navbar');
         var $collapse = document.querySelector('.navbar-collapse');
 
         var __XiaoNav__ = {
