--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -1,5 +1,5 @@
 {% comment %}
-    @param {string} type - 'page' | 'post' | 'keynote'
+    @param {string} type - 'page' | 'post' | 'keynote' | 'Sitepage'
     @param {boolean} short
 {% endcomment %}
 
