--- a/_layouts/Sitepage.html
+++ b/_layouts/Sitepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include intro-header.html %}
+{% include intro-header.html type='Sitepage' %}
 
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
