--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,6 +55,12 @@ layout: default
                 </div>
                 <!-- disqus 评论框 end -->
                 {% endif %}
+                
+                <% if (theme.gitalk.enable){ %>
+       				<div id="gitalk-container"></div>
+       				<%- include post/gitalk.ejs %>
+  				<% } %>
+
 
                 {% if site.netease_comment %}
                 <!-- 网易云跟帖 评论框 start -->
