--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,10 +56,6 @@ layout: default
                 <!-- disqus 评论框 end -->
                 {% endif %}
                 
-                <% if (theme.gitalk.enable){ %>
-       				<div id="gitalk-container"></div>
-  				<% } %>
-
 
                 {% if site.netease_comment %}
                 <!-- 网易云跟帖 评论框 start -->
@@ -146,13 +142,14 @@ layout: default
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 <script type="text/javascript">
+	var title = location.pathname.substr(0, 50);
 	var gitalk = new Gitalk({
         clientID: '{{ theme.gitalk.ClientID }}',
         clientSecret: '{{ theme.gitalk.ClientSecret }}',
         repo: '{{ theme.gitalk.repo }}',
         owner: '{{ theme.gitalk.githubID }}',
         admin: ['{{ theme.gitalk.adminUser }}'],
-        id: location.pathname,
+        id: title,
         distractionFreeMode: '{{ theme.gitalk.distractionFreeMode }}'
     })
     gitalk.render('gitalk-container')           
