--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,6 +56,10 @@ layout: default
                 <!-- disqus 评论框 end -->
                 {% endif %}
                 
+                <% if (site.gitalk){ %>
+       				<div id="gitalk-container"></div>
+  				<% } %>
+
 
                 {% if site.netease_comment %}
                 <!-- 网易云跟帖 评论框 start -->
