--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,9 +56,9 @@ layout: default
                 <!-- disqus 评论框 end -->
                 {% endif %}
                 
-                <% if (site.gitalk){ %>
+                {% if site.gitalk %}
        				<div id="gitalk-container"></div>
-  				<% } %>
+  				{% endif %}
 
 
                 {% if site.netease_comment %}
@@ -105,6 +105,7 @@ layout: default
 {% if page.mathjax %}
   {% include mathjax_support.html %}
 {% endif %}
+
 
 {% if site.netease_comment %}
 <!-- 网易云跟帖JS代码 start -->
