--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -149,13 +149,13 @@ layout: default
 <script type="text/javascript">
 	var title = location.pathname.substr(0, 50);
 	var gitalk = new Gitalk({
-        clientID: '{{ site.gitalk.ClientID }}',
-        clientSecret: '{{ site.gitalk.ClientSecret }}',
+        clientID: '{{ site.gitalk.client_id }}',
+        clientSecret: '{{ site.gitalk.client_secret }}',
         repo: '{{ site.gitalk.repo }}',
-        owner: '{{ site.gitalk.githubID }}',
-        admin: ['{{ site.gitalk.adminUser }}'],
+        owner: '{{ site.gitalk.owner }}',
+        admin: ['{{ site.gitalk.admin_user }}'],
         id: title,
-        distractionFreeMode: '{{ site.gitalk.distractionFreeMode }}'
+        distractionFreeMode: '{{ site.gitalk.distraction_free_mode }}'
     })
     gitalk.render('gitalk-container')           
 </script>
