--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,6 +15,12 @@ layout: default
       postlist-container">
       {{ content }}
     </div>
+    
+    <!-- Comment container -->
+    {% if site.gitalk %}
+       	<div id="gitalk-container"></div>
+  	{% endif %}
+    
     <!-- Sidebar Container -->
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1
       sidebar-container">
@@ -71,4 +77,22 @@ layout: default
 </script>
 <script type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+{% endif %}
+
+{% if site.gitalk %}
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+<script type="text/javascript">
+	var title = location.pathname.substr(0, 50);
+	var gitalk = new Gitalk({
+        clientID: '{{ site.gitalk.client_id }}',
+        clientSecret: '{{ site.gitalk.client_secret }}',
+        repo: '{{ site.gitalk.repo }}',
+        owner: '{{ site.gitalk.owner }}',
+        admin: ['{{ site.gitalk.admin_user }}'],
+        id: title,
+        distractionFreeMode: '{{ site.gitalk.distraction_free_mode }}'
+    })
+    gitalk.render('gitalk-container')           
+</script>
 {% endif %}
