--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,37 @@
 
 
 <!-- Image to hack wechat -->
-<img src="/img/icon_wechat.png" width="0" height="0" />
+<img src="/img/favicon.ico" width="0" height="0" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 </body>
+
+<div class="container">
+  <div class="row">
+	{% if site.gitalk %}
+       	<div id="gitalk-container"></div>
+  	{% endif %}
+  	</div>
+</div>
+
+
+{% if site.gitalk %}
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+<script type="text/javascript">
+	var title = location.pathname.substr(0, 50);
+	var gitalk = new Gitalk({
+        clientID: '{{ site.gitalk.client_id }}',
+        clientSecret: '{{ site.gitalk.client_secret }}',
+        repo: '{{ site.gitalk.repo }}',
+        owner: '{{ site.gitalk.owner }}',
+        admin: ['{{ site.gitalk.admin_user }}'],
+        id: title,
+        distractionFreeMode: '{{ site.gitalk.distraction_free_mode }}'
+    })
+    gitalk.render('gitalk-container')           
+</script>
+{% endif %}
+
 
 </html>
