--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,6 @@ class="statcounter" src="https://c.statcounter.com/12682225/0/9e9fcf04/1/"
 alt="Web Analytics Made Easy - Statcounter"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
-<a href="https://statcounter.com/p12682225/?guest=1">View My Stats</a>
+<!--<a href="https://statcounter.com/p12682225/?guest=1">View My Stats</a>-->
 
 </html>
