--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -323,7 +323,7 @@ pre.highlight {
 }
 .highlight .err {
   color: #960050;
-  background-color: #1e0010;
+  background-color: #F5F5DC;
 }
 .language-coq .highlight .err {
   background-color: transparent;
