--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -766,7 +766,7 @@ pre code {
   width: auto;
   white-space: pre;
   word-wrap: normal;
-  background: #F8F6E7;
+  background: #FAFAF5;
   color: #000000;
 }
 code,
