--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -673,6 +673,64 @@ p {
     margin: 25px 0;
   }
 }
+h1 {
+  display: table;
+  margin: 30px auto 20px auto !important;
+  padding: 10px !important;
+  background-image: linear-gradient(to left, rgb(253, 213, 231), rgb(194, 226, 249));
+  border-width: 1px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px #ccc;
+  font-size: 20px !important;
+  text-align: center;
+}
+
+/* 二级标题 */
+
+h2 {
+  display: table;
+  margin: 30px auto 20px auto !important;
+  padding: 0px 10px !important;
+  border-bottom: 5px solid #205792;
+  text-align: center;
+  font-size: 18px !important;
+}
+
+
+/* 三级标题 */
+
+h3 {
+  border-left: 8px solid #03a9f4;
+  padding: 4px 10px !important;
+  font-weight: bold;
+  border-bottom: none !important;
+}
+
+/* 四级标题 */
+
+h4 {
+  border-bottom: #2b2b2b;
+
+}
+
+h4:before {
+  content: "✒️ ";
+}
+
+h5 {}
+
+h5:before {
+  content: "✏️ ";
+}
+
+/* 六级标题 */
+
+h6 {
+  background-color: #f1f1f1;
+  border-left: 5px solid #fff;
+  padding-left: 5px !important;
+  box-shadow: -3px 0px #205792;
+}
 h1,
 h2,
 h3,
