--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -673,7 +673,7 @@ p {
     margin: 25px 0;
   }
 }
-h1 {
+/* h1 {
   display: table;
   margin: 30px auto 20px auto !important;
   padding: 10px !important;
@@ -730,7 +730,7 @@ h6 {
   border-left: 5px solid #fff;
   padding-left: 5px !important;
   box-shadow: -3px 0px #205792;
-}
+} */
 h1,
 h2,
 h3,
